Add custom category management and filtering